<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/grey">

    <Button
        android:id="@id/login"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/button"
        android:textColor="@color/black"

        android:onClick="loginUser"


        app:layout_constraintHorizontal_bias="0.5"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@id/newUser"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor="@color/black"
        android:text="@string/new_user"

        android:onClick="addUser"


        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.6"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@id/newUser"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor="@color/black"
        android:text="@string/text"

        android:onClick="sendText"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.9"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@id/newUser"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor="@color/black"
        android:text="@string/permission"

        android:onClick="askPermission"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.99"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@id/textWelcome"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor="@color/black"
        android:text="@string/app_intro"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.2"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@id/textEnterUser"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textColor="@color/black"
            android:text="@string/enter_user"

            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.7"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@id/username"

            android:layout_width="100dp"
            android:layout_height="wrap_content"

            android:inputType="text"
            android:textColor="@color/black"


            android:padding="8dp"

            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.2"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>





    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.3"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@id/textEnterPass"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textColor="@color/black"
            android:text="@string/enter_pass"

            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.7"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@id/password"

            android:layout_width="100dp"
            android:layout_height="wrap_content"

            android:inputType="textPassword"
            android:textColor="@color/black"


            android:padding="8dp"

            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.2"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>